<resources>
    <string name="app_name">Electro</string>
    <string name="quick_toggle">Toggle</string>

    <string name="notice_activated">Electro Service is on.</string>
    <string name="text" translatable="false">
        <font color="#ffffff">Service</font>
        <font color="#EF2E2E">OFF</font></string>
    <string name="notice_queries">DNS query times:</string>
    <string name="notice_need_restart">Re-activate Daedalus to make the settings take effect.</string>
    <string name="notice_start_download">Downloading rule, please wait …</string>
    <string name="notice_downloaded">Rule has been downloaded.</string>
    <string name="notice_download_failed">Download failed.</string>
    <string name="notice_now_downloading">Daedalus is currently downloading rule, please wait.</string>
    <string name="notice_fill_in_all">Please fill in all configuration items.</string>
    <string name="notice_delete_confirm_prompt">Are you sure you want to remove this configuration?</string>
    <string name="notice_after_stop">Please modify activated rules after stopping service.</string>
    <string name="notice_check_dynamic_rule_reload">Please enable "Allow dynamic rule reload" in Settings</string>
    <string name="notice_export_complete">Export completed.</string>
    <string name="notice_importing_rule">Importing rule… Please wait until blanks are filled.</string>


    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="export">Export</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_text_activate">Activate</string>
    <string name="button_text_deactivate">Deactivate</string>

    <string name="config_dns_server">DNS server config</string>
    <string name="config_rule">Rule config</string>

    <string name="settings_system">System Settings</string>
    <string name="settings_boot">Activate on Boot</string>
    <string name="settings_server">Server Settings</string>
    <string name="settings_notification">Show Notification</string>
    <string name="settings_check_update">Check Update</string>
    <string name="settings_update_summary">Visit GitHub Releases Page.</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_count_number_of_queries">Count DNS Query Times</string>
    <string name="settings_bug_report">Report a Bug</string>
    <string name="settings_issue_summary">Submit an Issue on GitHub Issues Page.</string>
    <string name="settings_dns_test_servers">DNS Test Servers</string>
    <string name="settings_help_and_support">Help &amp; Support</string>
    <string name="settings_advanced">Advanced System Settings</string>
    <string name="settings_advanced_on">On</string>
    <string name="settings_log_size">Log Size Limit</string>
    <string name="settings_manual">Manual</string>
    <string name="settings_manual_summary">Visit GitHub wiki page.</string>
    <string name="settings_dont_build_cache">Don\'t cache IP for DNS servers</string>
    <string name="settings_debug_output">Debug Output</string>
    <string name="settings_dark_theme">Use Dark Theme</string>
    <string name="settings_dns_query_method">DNS Query Method</string>
    <string name="settings_foreground">Run service in Foreground</string>
    <string name="settings_use_system_dns">Use System DNS as upstream DNS</string>

    <string name="settings_dns_tcp">TCP</string>
    <string name="settings_dns_udp">UDP</string>
    <string name="settings_dns_tls">TLS</string>
    <string name="settings_dns_https_ietf">HTTPS (RFC8484)</string>
    <string name="settings_dns_https_json">HTTPS (Google JSON)</string>

    <string name="settings_rule_name">Rule Name</string>
    <string name="settings_rule_type">Rule Type</string>
    <string name="settings_rule">Rule Settings</string>
    <string name="settings_rule_download_url">Rule Download URL</string>
    <string name="settings_rule_sync">Sync Rule</string>
    <string name="settings_rule_filename">Rule Filename</string>
    <string name="settings_rule_import">Import</string>
    <string name="settings_rule_import_built_in">Built-in</string>
    <string name="settings_rule_import_external">External</string>

    <string name="settings_server_name">Server Name</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_server_port">Server Port</string>

    <string name="settings_app_filter">App Filter</string>
    <string name="settings_app_filter_mode">Blacklist mode</string>
    <string name="settings_app_filter_list">Select application</string>
    <string name="settings_app_filter_list_summary">Select apps to pass through</string>

    <string name="server_twnic_primary">DNS1</string>
    <string name="server_twnic_secondary">DNS2</string>
    <string name="primary_server">Primary DNS server</string>
    <string name="secondary_server">Secondary DNS server</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="error_occurred">An error occurred at startup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signup_username_editetext_hint">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_textview_text">Don\'t have an account ?</string>
    <string name="electro_text_logo">E l e c t r o</string>
    <string name="signup_email_editetext_hint">Email</string>
    <string name="singup_create_account_text">Create Account</string>
    <string name="signup_login_btn_text">Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="go_pro_btn">Demo</string>
    <string name="open_gate_btn">Open Gate</string>
    <string name="website_text">Website</string>
    <string name="us">US!</string>
    <string name="support">Support</string>
    <string name="protocol">Protocol</string>
    <string name="pro_bussiness">Pro : Bussiness</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="persian">persian</string>
    <string name="release_note">Release note</string>
    <string name="log_out">Log out</string>
    <string name="appInMenu">App</string>
    <string name="update_request_text">Please downlaod last version of app</string>
    <string name="appply">Apply</string>
    <string name="errorOccurred">Error occured</string>
    <string name="download">Download</string>
    <string name="electro_text">Be Free</string>
    <string name="dummy_content">Electro</string>
    <string name="Ipv6AlertDialogTitle">توجه</string>
    <string name="TrollCancelText">نخوندم</string>
    <string name="amuzesh">آموزش</string>
    <string name="zudMiam">زودمیام</string>
    <string name="chiMikoni">چی میکنی؟</string>
    <string name="popUpAnouncmentTitle">سخن بزرگان</string>
    <string name="okButton">خوندم</string>

</resources>
