<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_login_page"
    tools:context=".activity.login.LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electro_text_logo"
        android:textColor="@color/pure_white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_textinput"
        android:layout_width="279dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/signup_email_editetext_hint"
        android:textColorHint="@color/hint_textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_username_textinput"
        android:layout_width="279dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/signup_username_editetext_hint"
        android:textColorHint="@color/hint_textcolor"
        app:layout_constraintEnd_toEndOf="@+id/signup_email_textinput"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="@+id/signup_email_textinput"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_textinput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password_textinput"
        android:layout_width="279dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/hint_textcolor"
        app:layout_constraintEnd_toEndOf="@+id/signup_username_textinput"

        app:layout_constraintStart_toStartOf="@+id/signup_username_textinput"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_textinput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpCreateAccountBTN"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_rounded_button"
        android:elevation="10dp"

        android:clickable="false"
        android:enabled="false"
        android:stateListAnimator="@null"
        android:text="@string/singup_create_account_text"
        android:textColor="@color/pure_white"
        app:layout_constraintEnd_toEndOf="@+id/signup_password_textinput"
        app:layout_constraintStart_toStartOf="@+id/signup_password_textinput"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_textinput"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signUpLoginBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparence_button"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/signup_login_btn_text"
        android:textColor="@color/pure_white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginTextView"
        app:layout_constraintStart_toStartOf="@+id/LoginTextView" />

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/pure_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpLoginBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>