<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_page"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".activity.login.LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electro_text_logo"
        android:textColor="@color/pure_white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/signup_username_editetext_hint"

        android:textColorHint="@color/hint_textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="7dp"
            android:textColor="@color/pure_white"
            tools:ignore="TouchTargetSizeCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/prompt_password"

        android:textColorHint="@color/hint_textcolor"
        app:layout_constraintEnd_toEndOf="@+id/usernameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameLayout"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="7dp"
            android:textColor="@color/pure_white"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_rounded_button"
        android:elevation="10dp"
        android:enabled="false"
        android:stateListAnimator="@null"
        android:text="@string/action_sign_in"
        android:textColor="@color/pure_white"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <Button
        android:id="@+id/signUpBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparence_button"
        android:elevation="10dp"
        android:text="@string/sign_up_btn"
        android:textColor="#ffffff"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginTextView"
        app:layout_constraintStart_toStartOf="@+id/LoginTextView" />

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/login_textview_text"
        android:textColor="@color/pure_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpBTN"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>