<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:background="@color/mainBgColor"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="end"-->
<!--        android:background="@color/main_page_icon_color"-->
<!--        android:visibility="gone"-->
<!--        app:headerLayout="@layout/drawer_header"-->
<!--        app:itemTextColor="@color/pure_white"-->
<!--        app:menu="@menu/drawer_menu" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        android:minHeight="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        tools:context=".activity.MainActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieLightAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lottieBgAnimation"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/backgroundfinall" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieBgAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/networkanimationfinal" />

        <ImageView
            android:id="@+id/violetShadow"
            android:layout_width="260dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:src="@drawable/violet_shadow"
            app:layout_constraintBottom_toBottomOf="@+id/connectionButtonBg"
            app:layout_constraintEnd_toEndOf="@+id/connectionButtonBg"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/connectionButtonBg"
            app:layout_constraintTop_toTopOf="@+id/connectionButtonBg"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/goProBTN"
            android:layout_width="99dp"
            android:layout_height="39dp"
            android:background="@drawable/main_rounded_button"
            android:elevation="10dp"
            android:text="@string/go_pro_btn"
            android:textColor="#F5FF09"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectionButtonBg" />

        <Button
            android:id="@+id/openGateBTN"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/open_gate_button_bg"
            android:elevation="10dp"
            android:text="@string/open_gate_btn"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectionButtonBg"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/connectionButtonBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="20dp"
            android:src="@drawable/ic_midcircle"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

        <ImageView
            android:id="@+id/electroLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_electro_logo"
            android:elevation="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/connectionButtonBg"
            app:layout_constraintEnd_toEndOf="@+id/connectionButtonBg"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/connectionButtonBg"
            app:layout_constraintTop_toTopOf="@+id/connectionButtonBg"
            app:layout_constraintVertical_bias="0.546" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"

            android:baselineAligned="false"
            android:gravity="fill"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/websiteIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_web_icon"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/website_text"
                    android:textColor="@color/main_page_icon_color"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/websiteIcon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/aboutUs"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_us_electro"
                    app:layout_constraintEnd_toStartOf="@+id/websiteIcon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/us"
                    android:textColor="@color/main_page_icon_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/supportUs"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_instagram_seeklogo_com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textColor="@color/main_page_icon_color"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/protocolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol"
            android:textColor="@color/pure_white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/openGateBTN"
            app:layout_constraintEnd_toEndOf="@+id/openGateBTN"
            app:layout_constraintStart_toStartOf="@+id/openGateBTN"
            app:layout_constraintTop_toBottomOf="@+id/connectionButtonBg"
            app:layout_constraintVertical_bias="0.885" />

        <TextView
            android:id="@+id/pro_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pro_bussiness"
            android:textColor="@color/pure_white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/openGateBTN"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/openGateBTN"
            app:layout_constraintTop_toBottomOf="@+id/openGateBTN"
            app:layout_constraintVertical_bias="0.222" />

        <ImageView
            android:id="@+id/connectionShadow"
            android:layout_width="180dp"
            android:layout_height="171dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/connectionButtonBg"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/connectionButtonBg"
            app:layout_constraintTop_toTopOf="@+id/connectionButtonBg"
            app:srcCompat="@drawable/ic_connection_button_shadow" />

        <ImageView
            android:id="@+id/blueShadow"
            android:layout_width="276dp"
            android:layout_height="265dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/blue_shadow"
            app:layout_constraintBottom_toTopOf="@+id/violetShadow"
            app:layout_constraintEnd_toEndOf="@+id/connectionButtonBg"
            app:layout_constraintHorizontal_bias="0.504"

            app:layout_constraintStart_toStartOf="@+id/connectionButtonBg"
            app:layout_constraintTop_toTopOf="@+id/connectionButtonBg"
            app:layout_constraintVertical_bias="0.493" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.drawerlayout.widget.DrawerLayout>
